Added header div

--- a/index.html
+++ b/index.html
@@ -19,8 +19,21 @@
     </section>
 
     <section id="game-page">
-        <h1 id="question">hi</h1>
-        <h2 id="options"></h2>
+        <div id="header">
+            <h1>Question 1</h1>
+            <h1>00:20</h1>
+        </div>
+        <h1 id="question"></h1>
+        <div id="options">
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+        </div>
+        <div id="bool">
+            <button>True</button>
+            <button>False</button>
+        </div>
     </section>
     <script src="script.js"></script>
 </body>
