Used uniquely selectable radios for mcqs

--- a/index.html
+++ b/index.html
@@ -30,17 +30,24 @@
         <h1 id="question"></h1>
 
         <div id="options">
-            <input type="radio" id="A" name="A" value="A">
+            <div>
+            <input type="radio" id="A" name="option" value="A">
             <label for="A"></label>
+            </div><br>
 
-            <input type="radio" id="B" name="B" value="B">
+            <div><input type="radio" id="B" name="option" value="B">
             <label for="B"></label>
+            </div><br>
 
-            <input type="radio" id="C" name="C" value="C">
+            <div>
+            <input type="radio" id="C" name="option" value="C">
             <label for="C"></label>
+            </div><br>
 
-            <input type="radio" id="D" name="D" value="D">
+            <div>
+            <input type="radio" id="D" name="option" value="D">
             <label for="D"></label>
+            </div><br>
 
             <button class="next" id="next">Next</button>
         </div>
